--- a/index.html
+++ b/index.html
@@ -7,8 +7,50 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>The Rosa</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <div class="main-toggle">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times"></i>
+          </div>
+          <a href="index.html" class="logo">
+            <img src="images/logo-rosa.png" alt="Logo Rosa" />
+          </a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Reservations</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">News</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- Header ends -->
+    <section id="hero" class="hero">
+      <div class="container">
+        <h2 class="sub-headline"><span class="first-letter">W</span>elcome</h2>
+      </div>
+    </section>
+    <script src="main.js"></script>
+  </body>
 </html>
