add discover us section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,30 @@
       </div>
     </section>
     <!-- Hero ends -->
+    <seciton class="discover-our-story">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="restaurant-description padding-right animate-left">
+            <div class="glogbal-headline">
+              <h2 class="sub-headline">
+                <span class="first-letter">D</span>iscover
+              </h2>
+              <h1 class="headline headline-dark">Our Story</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem sit
+              adipisci assumenda harum beatae cupiditate saepe quas voluptatem
+              iste culpa. Eaque ratione sequi saepe iusto?
+            </p>
+            <a href="#" class="btn body-btn">About us</a>
+          </div>
+          <div class="restaurant-info-img animate-right">
+            <img src="images/our-story-1.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </seciton>
+    <!-- Discover our story ends -->
 
     <script src="main.js"></script>
   </body>
