--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="single-animation">
             <h5>Ready to be opened</h5>
-            <a href="#" class="btn cta-btn"></a>
+            <a href="#" class="btn cta-btn">ENJOY</a>
           </div>
         </div>
       </div>
@@ -68,11 +68,12 @@
       <div class="container">
         <div class="restaurant-info">
           <div class="restaurant-description padding-right animate-left">
-            <div class="glogbal-headline">
+            <div class="global-headline">
               <h2 class="sub-headline">
                 <span class="first-letter">D</span>iscover
               </h2>
               <h1 class="headline headline-dark">Our Story</h1>
+              <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             </div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem sit
@@ -88,6 +89,147 @@
       </div>
     </seciton>
     <!-- Discover our story ends -->
+    <section class="tasteful-recipes between">
+      <div class="container">
+        <div class="global-headline">
+          <div class="animate-top">
+            <h2 class="sub-headline">
+              <span class="first-letter">T</span>asteful
+            </h2>
+          </div>
+          <div class="animate-bottom">
+            <h1 class="headline">Recipes</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Tasteful recipes ends -->
+    <section class="discover-our-menu">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="image-group padding-right animate-left">
+            <img src="images/menu-group-1.jpg" alt="" />
+            <img src="images/menu-group-2.jpg" alt="" />
+            <img src="images/menu-group-3.jpg" alt="" />
+            <img src="images/menu-group-4.jpg" alt="" />
+          </div>
+          <div class="restaurant-description animate-right">
+            <div class="global-headline">
+              <h2 class="sub-headline">
+                <span class="first-letter">D</span>iscover
+              </h2>
+              <h1 class="headline headline-dark">Menu</h1>
+              <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem sit
+              adipisci assumenda harum beatae cupiditate saepe quas voluptatem
+              iste culpa. Eaque ratione sequi saepe iusto?
+            </p>
+            <a href="#" class="btn body-btn">View the whole Menu</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Discover our menu ends -->
+    <section class="perfect-blend between">
+      <div class="container">
+        <div class="global-headline">
+          <div class="animate-top">
+            <h2 class="sub-headline">
+              <span class="first-letter">T</span>he Perfect
+            </h2>
+          </div>
+          <div class="animate-bottom">
+            <h1 class="headline">Blend</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Perfect blends ends -->
+    <section class="culinary-delight">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="restaurant-description padding-right animate-left">
+            <div class="global-headline">
+              <h2 class="sub-headline">
+                <span class="first-letter">C</span>ulinary
+              </h2>
+              <h1 class="headline headline-dark">Delight</h1>
+              <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem sit
+              adipisci assumenda harum beatae cupiditate saepe quas voluptatem
+              iste culpa. Eaque ratione sequi saepe iusto?
+            </p>
+            <a href="#" class="btn body-btn">Make a reservation</a>
+          </div>
+          <div class="image-group">
+            <img class="animate-top" src="images/delight-group-1.jpg" alt="" />
+            <img
+              class="animate-bottom"
+              src="images/delight-group-2.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Culinary delight ends -->
+    <footer>
+      <div class="container">
+        <div class="back-to-top">
+          <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+        </div>
+        <div class="footer-content">
+          <div class="footer-content-about animate-up">
+            <h4>About Rosa</h4>
+            <div class="asterisk">i.fas.fa-asterisk</div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+              unde numquam. Facere laborum quaerat deserunt dolorum, ex maiores
+              impedit, asperiores a dolore nulla, accusamus cum?
+            </p>
+          </div>
+          <div class="footer-content-divider animate-bottom">
+            <div class="social-media">
+              <h4>Follow along</h4>
+              <ul class="social-icons">
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-pinterest"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-tripadvisor"></i></a>
+                </li>
+              </ul>
+            </div>
+            <div class="newsletter-container">
+              <h4>Newsletter</h4>
+              <form action="" class="newsletter-form">
+                <input
+                  type="text"
+                  class="newsletter-input"
+                  placeholder="Your Email Address..."
+                />
+                <button class="newsletter-btn" type="submit">
+                  <i class="fas fa-envelope"></i>
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="main.js"></script>
   </body>
