--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </section>
     <!-- Hero ends -->
-    <seciton class="discover-our-story">
+    <section class="discover-our-story">
       <div class="container">
         <div class="restaurant-info">
           <div class="restaurant-description padding-right animate-left">
