correct section for discover-our-story

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
         </div>
       </div>
-    </seciton>
+    </section>
     <!-- Discover our story ends -->
     <section class="tasteful-recipes between">
       <div class="container">
