--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
         <div class="footer-content">
           <div class="footer-content-about animate-up">
             <h4>About Rosa</h4>
-            <div class="asterisk">i.fas.fa-asterisk</div>
+            <div class="asterisk">
+              <i class="fas fa-asterisk"></i>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               unde numquam. Facere laborum quaerat deserunt dolorum, ex maiores
